--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 .dock {
-  padding-bottom: 0 !important;
-  height: 4rem !important; /* Фиксированная высота */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4rem;
+  padding-bottom: env(safe-area-inset-bottom);
   box-sizing: border-box;
 }
 
