--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 .dock {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4rem;
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: 0 !important;
+  height: 5rem !important; /* Фиксированная высота */
   box-sizing: border-box;
 }
 
