--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,7 @@
 }
 
 .gradientBg2 {
-  background: linear-gradient(45deg, #132c6f, #6fa5e7, #1e40af);
+  background: linear-gradient(45deg, #0b1f56, #89b6ed, #1e40af);
   background-size: 200% 200%;
   animation: gradientShift 2s ease infinite;
 }
